Removed animation on mobile due to issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -155,6 +155,9 @@ to {
         justify-content: space-evenly;
         text-align:center;
     }
+    .imageFade{
+        animation:none;
+    }
     .next2, .hintButton, .reset{
         margin:0 5px;
     }
